--- a/FrontEnd/dashboard.html
+++ b/FrontEnd/dashboard.html
@@ -12,6 +12,7 @@
     <header class="header">
         <img src="images/lia.png" alt="Logo LIA" class="logo">
         <nav class="nav">
+            <button class="nav-button" onclick="window.location.href='quiz.html'">🧠 Meu perfil de investidor</button>
             <button class="nav-button" onclick="window.location.href='login.html'">🚪 Sair</button>
         </nav>
     </header>
