--- a/FrontEnd/planejamento.html
+++ b/FrontEnd/planejamento.html
@@ -72,6 +72,12 @@
   </nav>
 </header>
 
+<section class="finance-section">
+  <h2>🔍 Quer saber como está sua evolução?</h2>
+  <p>Acompanhe se você está no caminho certo para atingir suas metas.</p>
+  <button class="cta-button" onclick="window.location.href='analise_metas.html'">📊 Ver Análise Inteligente</button>
+</section>
+
 <main class="main-content">
   <h1>📦 Planejamento Financeiro Inteligente</h1>
   <p>Defina suas metas e deixe a LIA ajudar você a alcançá-las!</p>
