--- a/FrontEnd/investimentos.html
+++ b/FrontEnd/investimentos.html
@@ -66,7 +66,7 @@
 
     <section id="dicaPersonalizada" class="finance-section" style="display: none;">
       <div id="dicaResultado" class="investment-card"></div>
-      <button class="cta-button" onclick="window.location.href='grafico_ia.html'">🧠 Visualizar IA (PCA + KMeans)</button>
+      <button class="cta-button" onclick="window.location.href='visualizacao_ia.html'">🧠 Visualizar IA (PCA + KMeans)</button>
     </section>
   </main>
 
