--- a/FrontEnd/quiz.html
+++ b/FrontEnd/quiz.html
@@ -77,8 +77,8 @@
         respostas.push(valor);
       }
       localStorage.setItem('respostasQuiz', JSON.stringify(respostas));
-      alert("✅ Respostas salvas! Indo para suas dicas...");
-      window.location.href = "dicas_investimentos.html";
+      alert("✅ Respostas salvas! Voltando para o dashboard");
+      window.location.href = "dashboard.html";
     }
   </script>
 </body>
