--- a/FrontEnd/dashboard.html
+++ b/FrontEnd/dashboard.html
@@ -35,11 +35,11 @@
                 <p>Descubra sugestões personalizadas para investir melhor.</p>
             </div>
 
-            <div class="section-card" onclick="window.location.href='analise.html'">
-                <div class="emoji">📊</div>
-                <h3>Análise e<br>Predição</h3>
-                <p>Visualize o crescimento financeiro futuro em gráficos.</p>
-            </div>
+            <div class="section-card" onclick="window.location.href='resumo_geral.html'">
+                <div class="emoji">📋</div>
+                <h3>Resumo<br>Geral</h3>
+                <p>Veja um panorama das suas metas, aportes e projeções em um só lugar.</p>
+            </div>            
 
             <div class="section-card" onclick="window.location.href='sobre.html'">
                 <div class="emoji">ℹ️</div>
